Updated readme.md and index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <body>
 
-        <h1><img src="jeopardy_logo.jpg" alt="jeopardy-logo"></h1>
+        <h1><img src="images/jeopardy_logo.jpg" alt="jeopardy-logo"></h1>
         <div class="scoreboard">
             <h3>Scoreboard</h3>
             <div id="playerScore"></div>
